--- a/enchante.html
+++ b/enchante.html
@@ -16,7 +16,7 @@
 
     <header class="header_francaise">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <img src="images/ohmyfood.png" alt="logo">
+        <h1>ohmyfood</h1>
     </header>
 
     <div class="background"></div>
@@ -108,7 +108,7 @@
     <input type="button" value="Explorer nos restaurants">
 
     <footer>
-        <img src="images/ohmyfood.png" alt="">
+        <h3>ohmyfood</h3>
         <i class="fa-solid fa-utensils"></i><p><strong>Proposer un restaurant</strong></p>
         <i class="fa-solid fa-handshake-angle"></i><p><strong>Devenir partenaire</strong></p>
         <p><strong>Mentions légales</strong></p>
