--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header_accueil">
-        <img src="images/ohmyfood.png" alt="logo">
+        <h1>ohmyfood</h1>
         <div class="header_localisation">
             <i class="fa-solid fa-location-dot localisation"></i>
             <p><strong>Paris, Belleville</strong></p>
@@ -95,7 +95,7 @@
     </main>
 
     <footer>
-        <img src="images/ohmyfood.png" alt="">
+        <h3>ohmyfood</h3>
         <a><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
         <a><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
         <a><strong>Mentions légales</strong></a>
