--- a/palette.html
+++ b/palette.html
@@ -9,20 +9,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Roboto+Mono:wght@200&family=Roboto:wght@300&family=Square+Peg&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Roboto+Mono:wght@200&family=Roboto:wght@300&family=Shrikhand&family=Square+Peg&display=swap" rel="stylesheet"> <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/restaurants.css">
     <title>Projet 3</title>
 </head>
 <body>
 
-    <header class="header_francaise">
-        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <h1>ohmyfood</h1>
+    <header class="h_restaurants">
+        <a class="h_restaurants__fleche" href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <h1 class="h_restaurants__titre">ohmyfood</h1>
     </header>
 
     <div class="background"></div>
     <section class="palette">
         <div class="titre">
-            <h1>La note enchantée</h1>
+            <h1>La palette du goût</h1>
             <i class="fa-light fa-heart"></i>
         </div>
         <div class="entrees">
