--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Roboto+Mono:wght@200&family=Roboto:wght@300&family=Square+Peg&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/accueil.css">
     <title>Projet 3</title>
 </head>
 <body>
-    <header class="header_accueil">
+    <header class="h">
         <h1>ohmyfood</h1>
-        <div class="header_localisation">
-            <i class="fa-solid fa-location-dot localisation"></i>
+        <div class="h__localisation">
+            <i class="fa-solid fa-location-dot h__icon"></i>
             <p><strong>Paris, Belleville</strong></p>
         </div>
     </header>
@@ -29,69 +29,69 @@
 
         <div class="fonctionnement">
             <h1>Fonctionnement</h1>
-            <div class="flex_carte_fonctionnement">
-                <a class="carte_fonctionnement">
-                    <p>1</p>
-                    <i class="fa-solid fa-mobile-screen"></i>
+            <div class="fonctionnement__flex">
+                <a class="fonctionnement__carte">
+                    <p class="fonctionnement__numero">1</p>
+                    <i class="fa-solid fa-mobile-screen fonctionnement__icon"></i>
                     <h4>Choisissez un restaurant</h4>
                 </a>
-                <a class="carte_fonctionnement">
-                    <p>2</p>
-                    <i class="fa-solid fa-list"></i>
+                <a class="fonctionnement__carte">
+                    <p class="fonctionnement__numero">2</p>
+                    <i class="fa-solid fa-list fonctionnement__icon"></i>
                     <h4>Composez votre menu</h4>
                 </a>
-                <a class="carte_fonctionnement">
-                    <p>3</p>
-                    <i class="fa-solid fa-store"></i>
+                <a class="fonctionnement__carte">
+                    <p class="fonctionnement__numero">3</p>
+                    <i class="fa-solid fa-store fonctionnement__icon"></i>
                     <h4>Dégustez au restaurant</h4>
                 </a>
             </div>
         </div>
 
-        <div class="restaurants">
-            <div class="flex_carte_restaurants">
-                <a class="carte_restaurant carte_restaurant_nouveau">
-                    <div class="img_carte">
-                        <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
-                    </div>
-                    <div class="bas_carte">
-                        <h2>La palette du goût</h2>
+        <section class="restaurants">
+            <div class="restaurants__flex">
+                <div class="restaurants__carte">
+                    <a href="palette.html">
+                        <img class="restaurants__img" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                    <div class="restaurants__carte__bas">
+                        <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
                         <i class="fa-thin fa-heart"></i>
                     </div>
-                </a>
-                <a class="carte_restaurant carte_restaurant_nouveau">
-                    <div class="img_carte">
-                        <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
-                    </div>
-                    <div class="bas_carte">
+                    </a>
+                </div>
+                <div class="restaurants__carte">
+                    <a href="enchante.html">
+                        <img class="restaurants__img"  src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                    <div class="restaurants__carte__bas">
                         <h2>La note enchantée</h2>
                         <p>Charonne</p>
                         <i class="fa-thin fa-heart"></i>
                     </div>
-                </a>
-                <a href="francaise.html" class="carte_restaurant">
-                    <div class="img_carte">
-                        <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-                    </div>
-                    <div class="bas_carte">
+                    </a>
+                </div>
+                <div class="restaurants__carte">
+                    <a href="francaise.html">
+                        <img class="restaurants__img" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                    <div class="restaurants__carte__bas">
                         <h2>A la française</h2>
                         <p>Cité Rouge</p>
                         <i class="fa-thin fa-heart"></i>
                     </div>
-                </a>
-                <a class="carte_restaurant">
-                    <div class="img_carte">
-                        <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
-                    </div>
-                    <div class="bas_carte">
+                    </a>
+                </div>
+                <div class="restaurants__carte">
+                    <a href="delice.html">
+                        <img class="restaurants__img" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                    <div class="restaurants__carte__bas">
                         <h2>Le délice des sens</h2>
                         <p>Folie-Méricourt</p>
                         <i class="fa-thin fa-heart"></i>
                     </div>
-                </a>
+                    </a>
+                </div>
             </div>
-        </div>
+        </section>
     </main>
 
     <footer>
