--- a/delice.html
+++ b/delice.html
@@ -19,93 +19,97 @@
         <h1 class="h_restaurants__titre">ohmyfood</h1>
     </header>
 
-    <div class="background"></div>
+    <img src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="bg_image" alt="">
     <section class="delice">
         <div class="titre">
             <h1>Le délice des sens</h1>
-            <i class="fa-light fa-heart"></i>
+            <i class="fa-regular fa-heart fa-xl"></i>
         </div>
         <div class="entrees">
-            <p>ENTREES</p>
-            <div class="carte_restaurant">
+            <p class="titre_plat">ENTREES</p>
+            <div class="carte">
                 <h3>Tartare de thon</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Assaisonné au yuzu</p>
                     <p><strong>25€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Bouchée de homard croustillant</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Et sa farandole de petits légumes</p>
                     <p><strong>35€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Velouté de cèpes</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Aux truffes</p>
                     <p><strong>20€</strong></p>
                 </div>
             </div>
         </div>
         <div class="plats">
-            <p>PLATS</p>
-            <div class="carte_restaurant">
+            <p class="titre_plat">PLATS</p>
+            <div class="carte">
                 <h3>Poulet rôti aux herbes de provence</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Et sa crème de truffe</p>
                     <p><strong>40€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Langouste rôtie</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Et ses légumes de saison</p>
                     <p><strong>44€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Côte de boeuf angus</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Et sa purée de panais</p>
                     <p><strong>44€</strong></p>
                 </div>
             </div>
         </div>
         <div class="desserts">
-            <p>DESSERTS</p>
-            <div class="carte_restaurant">
+            <p class="titre_plat">DESSERTS</p>
+            <div class="carte">
                 <h3>Farandole de desserts</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Du chef</p>
                     <p><strong>18€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Crème brulée</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Revisitée</p>
                     <p><strong>22€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Tiramisu</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>A la noisette</p>
                     <p><strong>23€</strong></p>
                 </div>
             </div>
         </div>
     </section>
-    <input type="button" value="Explorer nos restaurants">
+ 
+    <div class="bouton">
+        <input type="button" value="Commander">
+    </div>
 
     <footer>
         <h3>ohmyfood</h3>
-        <i class="fa-solid fa-utensils"></i><p><strong>Proposer un restaurant</strong></p>
-        <i class="fa-solid fa-handshake-angle"></i><p><strong>Devenir partenaire</strong></p>
-        <p><strong>Mentions légales</strong></p>
-        <p><strong>Contact</strong></p>
+        <a><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
+        <a><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
+        <a><strong>Mentions légales</strong></a>
+        <a><strong>Contact</strong></a>
     </footer>
+
 </body>
 </html>
