--- a/enchante.html
+++ b/enchante.html
@@ -19,100 +19,104 @@
         <h1 class="h_restaurants__titre">ohmyfood</h1>
     </header>
 
-    <div class="background"></div>
+    <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" class="bg_image" alt="">
     <section class="enchante">
         <div class="titre">
             <h1>La note enchantée</h1>
-            <i class="fa-light fa-heart"></i>
+            <i class="fa-regular fa-heart fa-xl"></i>
         </div>
         <div class="entrees">
-            <p>ENTREES</p>
-            <div class="carte_restaurant">
+            <p class="titre_plat">ENTREES</p>
+            <div class="carte">
                 <h3>Ravioles de foie gras</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Accompagnés de leur crème à la truffe</p>
                     <p><strong>25€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Caviar osciètre</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Sur blini à la farine de blé noir</p>
                     <p><strong>35€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Homard et espuma de ...</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Mariné aux zests d'orange</p>
                     <p><strong>20€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Foie gras de canard cuit entier</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Confiture de figue et pain toasté</p>
                     <p><strong>35€</strong></p>
                 </div>
             </div>
         </div>
         <div class="plats">
-            <p>PLATS</p>
-            <div class="carte_restaurant">
+            <p class="titre_plat">PLATS</p>
+            <div class="carte">
                 <h3>Noix de coquilles Saint-Jacques</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Sur lit de purée de céleri-rave</p>
                     <p><strong>40€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Langoustine poêlée</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Purée de patate douce</p>
                     <p><strong>35€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Mijoté de queue de boeuf</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Et riz sauvage aux zests de citron</p>
                     <p><strong>44€</strong></p>
                 </div>
             </div>
         </div>
         <div class="desserts">
-            <p>DESSERTS</p>
-            <div class="carte_restaurant">
+            <p class="titre_plat">DESSERTS</p>
+            <div class="carte">
                 <h3>Macaron noisette et chocolat</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Glace au caramel brun et sel Guérande</p>
                     <p><strong>18€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Baba au rhum revisité</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Avec son coulis de citron</p>
                     <p><strong>22€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Tarte au citron meringuée</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Destructurée</p>
                     <p><strong>23€</strong></p>
                 </div>
             </div>
         </div>
     </section>
-    <input type="button" value="Explorer nos restaurants">
+
+    <div class="bouton">
+        <input type="button" value="Commander">
+    </div>
 
     <footer>
         <h3>ohmyfood</h3>
-        <i class="fa-solid fa-utensils"></i><p><strong>Proposer un restaurant</strong></p>
-        <i class="fa-solid fa-handshake-angle"></i><p><strong>Devenir partenaire</strong></p>
-        <p><strong>Mentions légales</strong></p>
-        <p><strong>Contact</strong></p>
+        <a><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
+        <a><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
+        <a><strong>Mentions légales</strong></a>
+        <a><strong>Contact</strong></a>
     </footer>
+
 </body>
 </html>
