--- a/francaise.html
+++ b/francaise.html
@@ -20,93 +20,96 @@
     </header>
 
 
-    <div class="background"></div>
+    <img src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="bg_image" alt="">
     <section class="francaise">
         <div class="titre">
             <h1>A la française</h1>
-            <i class="fa-light fa-heart"></i>
+            <i class="fa-regular fa-heart fa-xl"></i>
         </div>
         <div class="entrees">
-            <p>ENTREES</p>
-            <div class="carte_restaurant">
+            <p class="titre_plat">ENTREES</p>
+            <div class="carte">
                 <h3>Tartare de poulpe acidulé</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Aux zests d'orange</p>
                     <p><strong>25€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Velouté de légumes d'antan</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Carotte, panais, topinambour</p>
                     <p><strong>35€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Soupe à l'oignon</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Revisitée</p>
                     <p><strong>20€</strong></p>
                 </div>
             </div>
         </div>
         <div class="plats">
-            <p>PLATS</p>
-            <div class="carte_restaurant">
+            <p class="titre_plat">PLATS</p>
+            <div class="carte">
                 <h3>Coquilles Saint-Jacques</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Accompagnées d'une purée de panais</p>
                     <p><strong>40€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Magret de canard</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Et parmentier de pommes de terres</p>
                     <p><strong>35€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Sur son lit de gnocchis aux légumes</p>
                     <p><strong>44€</strong></p>
                 </div>
             </div>
         </div>
         <div class="desserts">
-            <p>DESSERTS</p>
-            <div class="carte_restaurant">
+            <p class="titre_plat">DESSERTS</p>
+            <div class="carte">
                 <h3>Pétales de violettes glacés</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Et purée de noisettes</p>
                     <p><strong>18€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Fondant au chocolat</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Revisité</p>
                     <p><strong>22€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Millefeuille croustillant</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Myrtilles et pâte d'amande</p>
                     <p><strong>23€</strong></p>
                 </div>
             </div>
         </div>
     </section>
-    <input type="button" value="Commander">
+    
+    <div class="bouton">
+        <input type="button" value="Commander">
+    </div>
 
     <footer>
         <h3>ohmyfood</h3>
-        <i class="fa-solid fa-utensils"></i><p><strong>Proposer un restaurant</strong></p>
-        <i class="fa-solid fa-handshake-angle"></i><p><strong>Devenir partenaire</strong></p>
-        <p><strong>Mentions légales</strong></p>
-        <p><strong>Contact</strong></p>
+        <a><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
+        <a><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
+        <a><strong>Mentions légales</strong></a>
+        <a><strong>Contact</strong></a>
     </footer>
 </body>
 </html>
