--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="recherche_restaurant">
             <h3>Réservez le menu qui vous convient</h3>
             <p>Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
-            <input type="button" value="Explorer nos restaurants">
+            <button type="button" value="Explorer nos restaurants">Explorez nos restaurants</button>
         </div>
 
         <div class="fonctionnement">
@@ -49,24 +49,29 @@
         </div>
 
         <section class="restaurants">
+            <h1>Restaurants</h1>
             <div class="restaurants__flex">
-                <div class="restaurants__carte">
+                <div class="restaurants__carte nouveau">
                     <a href="palette.html">
                         <img class="restaurants__img" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                     <div class="restaurants__carte__bas">
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                        <i class="fa-thin fa-heart"></i>
+                        <div class="restaurants__nom">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <i class="fa-regular fa-heart fa-xl"></i>                       
                     </div>
                     </a>
                 </div>
-                <div class="restaurants__carte">
+                <div class="restaurants__carte nouveau">
                     <a href="enchante.html">
                         <img class="restaurants__img"  src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                     <div class="restaurants__carte__bas">
-                        <h2>La note enchantée</h2>
-                        <p>Charonne</p>
-                        <i class="fa-thin fa-heart"></i>
+                        <div class="restaurants__nom">
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
+                        </div>
+                        <i class="fa-regular fa-heart fa-xl"></i>
                     </div>
                     </a>
                 </div>
@@ -74,9 +79,11 @@
                     <a href="francaise.html">
                         <img class="restaurants__img" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                     <div class="restaurants__carte__bas">
-                        <h2>A la française</h2>
-                        <p>Cité Rouge</p>
-                        <i class="fa-thin fa-heart"></i>
+                        <div class="restaurants__nom">
+                            <h3>A la française</h3>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <i class="fa-regular fa-heart fa-xl"></i>
                     </div>
                     </a>
                 </div>
@@ -84,9 +91,11 @@
                     <a href="delice.html">
                         <img class="restaurants__img" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                     <div class="restaurants__carte__bas">
-                        <h2>Le délice des sens</h2>
-                        <p>Folie-Méricourt</p>
-                        <i class="fa-thin fa-heart"></i>
+                        <div class="restaurants__nom">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                        <i class="fa-regular fa-heart fa-xl"></i>                        
                     </div>
                     </a>
                 </div>
