--- a/palette.html
+++ b/palette.html
@@ -19,93 +19,96 @@
         <h1 class="h_restaurants__titre">ohmyfood</h1>
     </header>
 
-    <div class="background"></div>
+    <img src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="bg_image" alt="">
     <section class="palette">
         <div class="titre">
             <h1>La palette du goût</h1>
-            <i class="fa-light fa-heart"></i>
+            <i class="fa-regular fa-heart fa-xl"></i>
         </div>
         <div class="entrees">
-            <p>ENTREES</p>
-            <div class="carte_restaurant">
+            <p class="titre_plat">ENTREES</p>
+            <div class="carte">
                 <h3>Fricassée d'escargot</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Au piment d'espelette</p>
                     <p><strong>25€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Foie gras de canard mi-cuit</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Et ses copeaux de truffe noire</p>
                     <p><strong>35€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Oeuf au plat</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Assaisonné à la truffe sur lit de ..</p>
                     <p><strong>20€</strong></p>
                 </div>
             </div>
         </div>
         <div class="plats">
-            <p>PLATS</p>
-            <div class="carte_restaurant">
+            <p class="titre_plat">PLATS</p>
+            <div class="carte">
                 <h3>Filet de boeuf aux herbes</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Accompagné de sa ribambelle de légu...</p>
                     <p><strong>40€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Parmentier de queue de boeuf</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>A la truffe noire sur sa purée de panais</p>
                     <p><strong>35€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Filet de Turbot</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Aux agrumes</p>
                     <p><strong>44€</strong></p>
                 </div>
             </div>
         </div>
         <div class="desserts">
-            <p>DESSERTS</p>
-            <div class="carte_restaurant">
+            <p class="titre_plat">DESSERTS</p>
+            <div class="carte">
                 <h3>Paris-Brest</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Revisité</p>
                     <p><strong>18€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Macaron au chocolat d'exception</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Et glace à la vanille de Madagascar</p>
                     <p><strong>22€</strong></p>
                 </div>
             </div>
-            <div class="carte_restaurant">
+            <div class="carte">
                 <h3>Mousse au chocolat</h3>
-                <div class="prix_plat">
+                <div class="carte__prix">
                     <p>Au piment d'espelette et à la truffe noire</p>
                     <p><strong>23€</strong></p>
                 </div>
             </div>
         </div>
     </section>
-    <input type="button" value="Explorer nos restaurants">
+   
+    <div class="bouton">
+        <input type="button" value="Commander">
+    </div>
 
     <footer>
         <h3>ohmyfood</h3>
-        <i class="fa-solid fa-utensils"></i><p><strong>Proposer un restaurant</strong></p>
-        <i class="fa-solid fa-handshake-angle"></i><p><strong>Devenir partenaire</strong></p>
-        <p><strong>Mentions légales</strong></p>
-        <p><strong>Contact</strong></p>
+        <a><i class="fa-solid fa-utensils"></i><strong>Proposer un restaurant</strong></a>
+        <a><i class="fa-solid fa-handshake-angle"></i><strong>Devenir partenaire</strong></a>
+        <a><strong>Mentions légales</strong></a>
+        <a><strong>Contact</strong></a>
     </footer>
 </body>
 </html>
