--- a/enchante.html
+++ b/enchante.html
@@ -19,7 +19,7 @@
         <h1 class="h_restaurants__titre">ohmyfood</h1>
     </header>
 
-    <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" class="bg_image" alt="">
+    <img src="images/stil-u2Lp8tXIcjw-unsplash.jpg" class="bg_image img_enchante" alt="">
     <section class="enchante">
         <div class="titre">
             <h1>La note enchantée</h1>
@@ -27,11 +27,15 @@
         </div>
         <div class="entrees">
             <p class="titre_plat">ENTREES</p>
+            <div class="trait_entrees"></div>
             <div class="carte">
                 <h3>Ravioles de foie gras</h3>
                 <div class="carte__prix">
                     <p>Accompagnés de leur crème à la truffe</p>
                     <p><strong>25€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -39,6 +43,9 @@
                 <div class="carte__prix">
                     <p>Sur blini à la farine de blé noir</p>
                     <p><strong>35€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -46,6 +53,9 @@
                 <div class="carte__prix">
                     <p>Mariné aux zests d'orange</p>
                     <p><strong>20€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -53,16 +63,23 @@
                 <div class="carte__prix">
                     <p>Confiture de figue et pain toasté</p>
                     <p><strong>35€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
         </div>
         <div class="plats">
             <p class="titre_plat">PLATS</p>
+            <div class="trait_plats"></div>
             <div class="carte">
                 <h3>Noix de coquilles Saint-Jacques</h3>
                 <div class="carte__prix">
                     <p>Sur lit de purée de céleri-rave</p>
                     <p><strong>40€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -70,6 +87,9 @@
                 <div class="carte__prix">
                     <p>Purée de patate douce</p>
                     <p><strong>35€</strong></p>
+                    <div class="animation_check">
+                        <i class="fa-solid fa-circle-check fa-xl"></i>
+                    </div>
                 </div>
             </div>
             <div class="carte">
@@ -77,16 +97,23 @@
                 <div class="carte__prix">
                     <p>Et riz sauvage aux zests de citron</p>
                     <p><strong>44€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
         </div>
         <div class="desserts">
             <p class="titre_plat">DESSERTS</p>
+            <div class="trait_desserts"></div>
             <div class="carte">
                 <h3>Macaron noisette et chocolat</h3>
                 <div class="carte__prix">
                     <p>Glace au caramel brun et sel Guérande</p>
                     <p><strong>18€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -94,6 +121,9 @@
                 <div class="carte__prix">
                     <p>Avec son coulis de citron</p>
                     <p><strong>22€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -101,6 +131,9 @@
                 <div class="carte__prix">
                     <p>Destructurée</p>
                     <p><strong>23€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
         </div>
