--- a/francaise.html
+++ b/francaise.html
@@ -28,11 +28,15 @@
         </div>
         <div class="entrees">
             <p class="titre_plat">ENTREES</p>
+            <div class="trait_entrees"></div>
             <div class="carte">
                 <h3>Tartare de poulpe acidulé</h3>
                 <div class="carte__prix">
                     <p>Aux zests d'orange</p>
                     <p><strong>25€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -40,6 +44,9 @@
                 <div class="carte__prix">
                     <p>Carotte, panais, topinambour</p>
                     <p><strong>35€</strong></p>
+                    <div class="animation_check">
+                        <i class="fa-solid fa-circle-check fa-xl"></i>
+                    </div>
                 </div>
             </div>
             <div class="carte">
@@ -47,16 +54,23 @@
                 <div class="carte__prix">
                     <p>Revisitée</p>
                     <p><strong>20€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
         </div>
         <div class="plats">
             <p class="titre_plat">PLATS</p>
+            <div class="trait_plats"></div>
             <div class="carte">
                 <h3>Coquilles Saint-Jacques</h3>
                 <div class="carte__prix">
                     <p>Accompagnées d'une purée de panais</p>
                     <p><strong>40€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -64,6 +78,9 @@
                 <div class="carte__prix">
                     <p>Et parmentier de pommes de terres</p>
                     <p><strong>35€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -71,16 +88,23 @@
                 <div class="carte__prix">
                     <p>Sur son lit de gnocchis aux légumes</p>
                     <p><strong>44€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
         </div>
         <div class="desserts">
             <p class="titre_plat">DESSERTS</p>
+            <div class="trait_desserts"></div>
             <div class="carte">
                 <h3>Pétales de violettes glacés</h3>
                 <div class="carte__prix">
                     <p>Et purée de noisettes</p>
                     <p><strong>18€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -88,6 +112,9 @@
                 <div class="carte__prix">
                     <p>Revisité</p>
                     <p><strong>22€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -95,6 +122,9 @@
                 <div class="carte__prix">
                     <p>Myrtilles et pâte d'amande</p>
                     <p><strong>23€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
         </div>
