--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Roboto+Mono:wght@200&family=Roboto:wght@300&family=Square+Peg&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Roboto+Mono:wght@200&family=Roboto:wght@300&family=Shrikhand&family=Square+Peg&display=swap" rel="stylesheet"> <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&family=Roboto+Mono:wght@200&family=Roboto:wght@300&family=Square+Peg&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/accueil.css">
     <title>Projet 3</title>
 </head>
@@ -19,12 +21,13 @@
             <p><strong>Paris, Belleville</strong></p>
         </div>
     </header>
+  
 
     <main>
         <div class="recherche_restaurant">
             <h3>Réservez le menu qui vous convient</h3>
             <p>Découvrez des restaurants d'exception, selectionnés par nos soins.</p>
-            <button type="button" value="Explorer nos restaurants">Explorez nos restaurants</button>
+            <input type="button" value="Explorer nos restaurants">
         </div>
 
         <div class="fonctionnement">
@@ -59,7 +62,10 @@
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
                         </div>
-                        <i class="fa-regular fa-heart fa-xl"></i>                       
+                        <div class="heart">
+                            <i class="fa fa-heart-o fa_xl jauge"></i>
+                            <i class="fa fa-heart fa-xl jauge_remplissage"></i>                             
+                        </div>                      
                     </div>
                     </a>
                 </div>
