--- a/palette.html
+++ b/palette.html
@@ -25,78 +25,108 @@
             <h1>La palette du goût</h1>
             <i class="fa-regular fa-heart fa-xl"></i>
         </div>
-        <div class="entrees">
-            <p class="titre_plat">ENTREES</p>
-            <div class="carte">
-                <h3>Fricassée d'escargot</h3>
-                <div class="carte__prix">
-                    <p>Au piment d'espelette</p>
-                    <p><strong>25€</strong></p>
+            <div class="entrees">
+                <p class="titre_plat">ENTREES</p>
+                <div class="trait_entrees"></div>
+                <div class="carte">
+                    <h3>Fricassée d'escargot</h3>
+                    <div class="carte__prix">
+                        <p>Au piment d'espelette</p>
+                        <p><strong>25€</strong></p>
+                        <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="carte">
+                    <h3>Foie gras de canard mi-cuit</h3>
+                    <div class="carte__prix">
+                        <p>Et ses copeaux de truffe noire</p>
+                        <p><strong>35€</strong></p>
+                        <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="carte">
+                    <h3>Oeuf au plat</h3>
+                    <div class="carte__prix">
+                        <p>Assaisonné à la truffe sur lit de ..</p>
+                        <p><strong>20€</strong></p>
+                        <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="carte">
-                <h3>Foie gras de canard mi-cuit</h3>
-                <div class="carte__prix">
-                    <p>Et ses copeaux de truffe noire</p>
-                    <p><strong>35€</strong></p>
+            <div class="plats">
+                <p class="titre_plat">PLATS</p>
+                <div class="trait_plats"></div>
+                <div class="carte">
+                    <h3>Filet de boeuf aux herbes</h3>
+                    <div class="carte__prix">
+                        <p>Accompagné de sa ribambelle de légu...</p>
+                        <p><strong>40€</strong></p>
+                        <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="carte">
+                    <h3>Parmentier de queue de boeuf</h3>
+                    <div class="carte__prix">
+                        <p>A la truffe noire sur sa purée de panais</p>
+                        <p><strong>35€</strong></p>
+                        <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="carte">
+                    <h3>Filet de Turbot</h3>
+                    <div class="carte__prix">
+                        <p>Aux agrumes</p>
+                        <p><strong>44€</strong></p>
+                        <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="carte">
-                <h3>Oeuf au plat</h3>
-                <div class="carte__prix">
-                    <p>Assaisonné à la truffe sur lit de ..</p>
-                    <p><strong>20€</strong></p>
+            <div class="desserts">
+                <p class="titre_plat">DESSERTS</p>
+                <div class="trait_desserts"></div>
+                <div class="carte">
+                    <h3>Paris-Brest</h3>
+                    <div class="carte__prix">
+                        <p>Revisité</p>
+                        <p><strong>18€</strong></p>
+                        <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="carte">
+                    <h3>Macaron au chocolat d'exception</h3>
+                    <div class="carte__prix">
+                        <p>Et glace à la vanille de Madagascar</p>
+                        <p><strong>22€</strong></p>
+                        <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="carte">
+                    <h3>Mousse au chocolat</h3>
+                    <div class="carte__prix">
+                        <p>Au piment d'espelette et à la truffe noire</p>
+                        <p><strong>23€</strong></p>
+                        <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="plats">
-            <p class="titre_plat">PLATS</p>
-            <div class="carte">
-                <h3>Filet de boeuf aux herbes</h3>
-                <div class="carte__prix">
-                    <p>Accompagné de sa ribambelle de légu...</p>
-                    <p><strong>40€</strong></p>
-                </div>
-            </div>
-            <div class="carte">
-                <h3>Parmentier de queue de boeuf</h3>
-                <div class="carte__prix">
-                    <p>A la truffe noire sur sa purée de panais</p>
-                    <p><strong>35€</strong></p>
-                </div>
-            </div>
-            <div class="carte">
-                <h3>Filet de Turbot</h3>
-                <div class="carte__prix">
-                    <p>Aux agrumes</p>
-                    <p><strong>44€</strong></p>
-                </div>
-            </div>
-        </div>
-        <div class="desserts">
-            <p class="titre_plat">DESSERTS</p>
-            <div class="carte">
-                <h3>Paris-Brest</h3>
-                <div class="carte__prix">
-                    <p>Revisité</p>
-                    <p><strong>18€</strong></p>
-                </div>
-            </div>
-            <div class="carte">
-                <h3>Macaron au chocolat d'exception</h3>
-                <div class="carte__prix">
-                    <p>Et glace à la vanille de Madagascar</p>
-                    <p><strong>22€</strong></p>
-                </div>
-            </div>
-            <div class="carte">
-                <h3>Mousse au chocolat</h3>
-                <div class="carte__prix">
-                    <p>Au piment d'espelette et à la truffe noire</p>
-                    <p><strong>23€</strong></p>
-                </div>
-            </div>
-        </div>
     </section>
    
     <div class="bouton">
