--- a/delice.html
+++ b/delice.html
@@ -27,11 +27,15 @@
         </div>
         <div class="entrees">
             <p class="titre_plat">ENTREES</p>
+            <div class="trait_entrees"></div>
             <div class="carte">
                 <h3>Tartare de thon</h3>
                 <div class="carte__prix">
                     <p>Assaisonné au yuzu</p>
                     <p><strong>25€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -39,6 +43,9 @@
                 <div class="carte__prix">
                     <p>Et sa farandole de petits légumes</p>
                     <p><strong>35€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -46,16 +53,23 @@
                 <div class="carte__prix">
                     <p>Aux truffes</p>
                     <p><strong>20€</strong></p>
+                    <div class="animation_check">
+                        <i class="fa-solid fa-circle-check fa-xl"></i>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="plats">
             <p class="titre_plat">PLATS</p>
+            <div class="trait_plats"></div>
             <div class="carte">
                 <h3>Poulet rôti aux herbes de provence</h3>
                 <div class="carte__prix">
                     <p>Et sa crème de truffe</p>
                     <p><strong>40€</strong></p>
+                    <div class="animation_check">
+                        <i class="fa-solid fa-circle-check fa-xl"></i>
+                    </div>
                 </div>
             </div>
             <div class="carte">
@@ -63,6 +77,9 @@
                 <div class="carte__prix">
                     <p>Et ses légumes de saison</p>
                     <p><strong>44€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
             <div class="carte">
@@ -70,16 +87,23 @@
                 <div class="carte__prix">
                     <p>Et sa purée de panais</p>
                     <p><strong>44€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
         </div>
         <div class="desserts">
             <p class="titre_plat">DESSERTS</p>
+            <div class="trait_desserts"></div>
             <div class="carte">
                 <h3>Farandole de desserts</h3>
                 <div class="carte__prix">
                     <p>Du chef</p>
                     <p><strong>18€</strong></p>
+                    <div class="animation_check">
+                        <i class="fa-solid fa-circle-check fa-xl"></i>
+                    </div>
                 </div>
             </div>
             <div class="carte">
@@ -87,6 +111,9 @@
                 <div class="carte__prix">
                     <p>Revisitée</p>
                     <p><strong>22€</strong></p>
+                    <div class="animation_check">
+                        <i class="fa-solid fa-circle-check fa-xl"></i>
+                    </div>
                 </div>
             </div>
             <div class="carte">
@@ -94,6 +121,9 @@
                 <div class="carte__prix">
                     <p>A la noisette</p>
                     <p><strong>23€</strong></p>
+                             <div class="animation_check">
+                            <i class="fa-solid fa-circle-check fa-xl"></i>
+                        </div>
                 </div>
             </div>
         </div>
